--- a/product-service/package.json
+++ b/product-service/package.json
@@ -1,10 +1,10 @@
 {
   "name": "product-service",
   "version": "1.0.0",
-  "description": "Serverless aws-nodejs-typescript template",
+  "description": "Serverless aws nodejs typescript service",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -14,13 +14,22 @@
     "@middy/http-json-body-parser": "^2.5.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^29.0.3",
     "@types/node": "^14.14.25",
+    "babel-jest": "^29.0.3",
     "esbuild": "^0.14.11",
+    "jest": "^29.0.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
+    "ts-jest": "^29.0.2",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
