--- a/product-service/tsconfig.json
+++ b/product-service/tsconfig.json
@@ -8,6 +8,7 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "ES2020",
     "outDir": "lib"
