--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
+    "aws-sdk": "^2.1233.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
