--- a/product-service/package.json
+++ b/product-service/package.json
@@ -5,6 +5,9 @@
   "main": "serverless.ts",
   "scripts": {
     "test": "jest",
+    "serverless": "serverless",
+    "serverless:deploy:dev": "serverless deploy --stage dev",
+    "serverless:remove:dev": "serverless remove --stage dev",
     "local:build": "docker-compose build",
     "local:up": "docker-compose up",
     "local:stop": "docker-compose stop",
