fix: replace https with http in proxy requests

--- a/bff-service/.ebextensions/options.config
+++ b/bff-service/.ebextensions/options.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:application:environment: 
     NODE_ENV: 'production'
-    products: 'https://dvzqnx6nl3.execute-api.us-east-1.amazonaws.com/dev'
+    products: 'https://dvzqnx6nl3.execute-api.us-east-1.amazonaws.com/dev/products'
     cart: 'http://zashrin-cart-api-dev.us-east-1.elasticbeanstalk.com'
