--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "engines": { "node" : ">=10 <17" },
+  "engines": { "node" : ">=10" },
   "scripts": {
     "start": "node src/index.js",
     "eb:init": "eb init zashrin-bff-api --platform node.js -r us-east-1",
